--- a/.jshintrc
+++ b/.jshintrc
@@ -4,7 +4,8 @@
   "undef": true,
   "globals": {
     "jQuery": true,
-    "Promise"   : true
+    "Promise"   : true,
+    "$": true
   },
   "node": true
 }
